--- a/goto-antiques/client/package.json
+++ b/goto-antiques/client/package.json
@@ -1,1 +1,38 @@
-
+{
+	"name": "client",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"antd": "^5.0.3",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-router-dom": "^6.4.4",
+		"react-scripts": "3.2.0",
+		"web3": "^1.6.1"
+	},
+	"scripts": {
+		"start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+		"build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"autoprefixer": "^9.8.6",
+		"postcss": "^8.4.14",
+		"postcss-cli": "^9.1.0",
+		"tailwindcss": "^3.0.24"
+	}
+}
